<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/choose_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btn_choose_img" />

    <Button
        android:id="@+id/get_json_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_json_data" />

    <Button
        android:id="@+id/get_xml_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_xml_data" />

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imgview_selected_image" />

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/response_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
    </ScrollView>

</LinearLayout>