<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:elevation="10dp"
    android:orientation="vertical"
    android:layout_margin="20dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:alpha="0.8"
        android:background="#fafafa">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eceff1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/card_title"
            android:textColor="#000000"
            android:textSize="15sp" />

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/card_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:src="@mipmap/card_empty"
            android:contentDescription="@string/description" />

        <TextView
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_img"
            android:textAlignment="center"
            android:layout_marginBottom="-10dp"
            android:text="@string/card_code" />
    </RelativeLayout>

</android.support.v7.widget.CardView>